triton_backend_sys/src/bindings.rs

pub const tritonserver_modelcontrolmode_enum_TRITONSERVER_MODEL_CONTROL_NONE:
    tritonserver_modelcontrolmode_enum = 0;
pub const tritonserver_modelcontrolmode_enum_TRITONSERVER_MODEL_CONTROL_POLL:
    tritonserver_modelcontrolmode_enum = 1;
pub const tritonserver_modelcontrolmode_enum_TRITONSERVER_MODEL_CONTROL_EXPLICIT:
    tritonserver_modelcontrolmode_enum = 2;
#[doc = " Model control modes"]
pub type tritonserver_modelcontrolmode_enum = ::std::os::raw::c_uint;
#[doc = " Model control modes"]
pub use self::tritonserver_modelcontrolmode_enum as TRITONSERVER_ModelControlMode;
pub const tritonserver_ratelimitmode_enum_TRITONSERVER_RATE_LIMIT_OFF:
    tritonserver_ratelimitmode_enum = 0;
pub const tritonserver_ratelimitmode_enum_TRITONSERVER_RATE_LIMIT_EXEC_COUNT:
    tritonserver_ratelimitmode_enum = 1;
#[doc = " Rate limit modes"]
pub type tritonserver_ratelimitmode_enum = ::std::os::raw::c_uint;
#[doc = " Rate limit modes"]
pub use self::tritonserver_ratelimitmode_enum as TRITONSERVER_RateLimitMode;
extern "C" {
    #[doc = " Create a new server options object. The caller takes ownership of\n the TRITONSERVER_ServerOptions object and must call\n TRITONSERVER_ServerOptionsDelete to release the object.\n\n \\param options Returns the new server options object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsNew(
        options: *mut *mut TRITONSERVER_ServerOptions,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete a server options object.\n\n \\param options The server options object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsDelete(
        options: *mut TRITONSERVER_ServerOptions,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the textual ID for the server in a server options. The ID is a\n name that identifies the server.\n\n \\param options The server options object.\n \\param server_id The server identifier.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetServerId(
        options: *mut TRITONSERVER_ServerOptions,
        server_id: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the model repository path in a server options. The path must be\n the full absolute path to the model repository. This function can be called\n multiple times with different paths to set multiple model repositories.\n Note that if a model is not unique across all model repositories\n at any time, the model will not be available.\n\n \\param options The server options object.\n \\param model_repository_path The full path to the model repository.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetModelRepositoryPath(
        options: *mut TRITONSERVER_ServerOptions,
        model_repository_path: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the model control mode in a server options. For each mode the models\n will be managed as the following:\n\n   TRITONSERVER_MODEL_CONTROL_NONE: the models in model repository will be\n   loaded on startup. After startup any changes to the model repository will\n   be ignored. Calling TRITONSERVER_ServerPollModelRepository will result in\n   an error.\n\n   TRITONSERVER_MODEL_CONTROL_POLL: the models in model repository will be\n   loaded on startup. The model repository can be polled periodically using\n   TRITONSERVER_ServerPollModelRepository and the server will load, unload,\n   and updated models according to changes in the model repository.\n\n   TRITONSERVER_MODEL_CONTROL_EXPLICIT: the models in model repository will\n   not be loaded on startup. The corresponding model control APIs must be\n   called to load / unload a model in the model repository.\n\n \\param options The server options object.\n \\param mode The mode to use for the model control.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetModelControlMode(
        options: *mut TRITONSERVER_ServerOptions,
        mode: TRITONSERVER_ModelControlMode,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the model to be loaded at startup in a server options. The model must be\n present in one, and only one, of the specified model repositories.\n This function can be called multiple times with different model name\n to set multiple startup models.\n Note that it only takes affect on TRITONSERVER_MODEL_CONTROL_EXPLICIT mode.\n\n \\param options The server options object.\n \\param mode_name The name of the model to load on startup.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetStartupModel(
        options: *mut TRITONSERVER_ServerOptions,
        model_name: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Enable or disable strict model configuration handling in a server\n options.\n\n \\param options The server options object.\n \\param strict True to enable strict model configuration handling,\n false to disable.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetStrictModelConfig(
        options: *mut TRITONSERVER_ServerOptions,
        strict: bool,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the rate limit mode in a server options.\n\n   TRITONSERVER_RATE_LIMIT_EXEC_COUNT: The rate limiting prioritizes the\n   inference execution using the number of times each instance has got a\n   chance to run. The execution gets to run only when its resource\n   constraints are satisfied.\n\n   TRITONSERVER_RATE_LIMIT_OFF: The rate limiting is turned off and the\n   inference gets executed whenever an instance is available.\n\n \\param options The server options object.\n \\param mode The mode to use for the rate limiting. By default, execution\n count is used to determine the priorities.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetRateLimiterMode(
        options: *mut TRITONSERVER_ServerOptions,
        mode: TRITONSERVER_RateLimitMode,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Add resource count for rate limiting.\n\n \\param options The server options object.\n \\param name The name of the resource.\n \\param count The count of the resource.\n \\param device The device identifier for the resource. A value of -1\n indicates that the specified number of resources are available on every\n device. The device value is ignored for a global resource. The server\n will use the rate limiter configuration specified for instance groups\n in model config to determine whether resource is global. In case of\n conflicting resource type in different model configurations, server\n will raise an appropriate error while loading model.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsAddRateLimiterResource(
        options: *mut TRITONSERVER_ServerOptions,
        resource_name: *const ::std::os::raw::c_char,
        resource_count: usize,
        device: ::std::os::raw::c_int,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the total pinned memory byte size that the server can allocate\n in a server options. The pinned memory pool will be shared across\n Triton itself and the backends that use\n TRITONBACKEND_MemoryManager to allocate memory.\n\n \\param options The server options object.\n \\param size The pinned memory pool byte size.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetPinnedMemoryPoolByteSize(
        options: *mut TRITONSERVER_ServerOptions,
        size: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the total CUDA memory byte size that the server can allocate\n on given GPU device in a server options. The pinned memory pool\n will be shared across Triton itself and the backends that use\n TRITONBACKEND_MemoryManager to allocate memory.\n\n \\param options The server options object.\n \\param gpu_device The GPU device to allocate the memory pool.\n \\param size The CUDA memory pool byte size.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetCudaMemoryPoolByteSize(
        options: *mut TRITONSERVER_ServerOptions,
        gpu_device: ::std::os::raw::c_int,
        size: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the total response cache byte size that the server can allocate in CPU\n memory. The response cache will be shared across all inference requests and\n across all models.\n\n \\param options The server options object.\n \\param size The total response cache byte size.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetResponseCacheByteSize(
        options: *mut TRITONSERVER_ServerOptions,
        size: u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the minimum support CUDA compute capability in a server\n options.\n\n \\param options The server options object.\n \\param cc The minimum CUDA compute capability.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetMinSupportedComputeCapability(
        options: *mut TRITONSERVER_ServerOptions,
        cc: f64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Enable or disable exit-on-error in a server options.\n\n \\param options The server options object.\n \\param exit True to enable exiting on intialization error, false\n to continue.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetExitOnError(
        options: *mut TRITONSERVER_ServerOptions,
        exit: bool,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Enable or disable strict readiness handling in a server options.\n\n \\param options The server options object.\n \\param strict True to enable strict readiness handling, false to\n disable.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetStrictReadiness(
        options: *mut TRITONSERVER_ServerOptions,
        strict: bool,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the exit timeout, in seconds, for the server in a server\n options.\n\n \\param options The server options object.\n \\param timeout The exit timeout, in seconds.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetExitTimeout(
        options: *mut TRITONSERVER_ServerOptions,
        timeout: ::std::os::raw::c_uint,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the number of threads used in buffer manager in a server options.\n\n \\param options The server options object.\n \\param thread_count The number of threads.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetBufferManagerThreadCount(
        options: *mut TRITONSERVER_ServerOptions,
        thread_count: ::std::os::raw::c_uint,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the number of threads to concurrently load models in a server options.\n\n \\param options The server options object.\n \\param thread_count The number of threads.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ServerOptionsSetModelLoadThreadCount(
        options: *mut TRITONSERVER_ServerOptions,
        thread_count: ::std::os::raw::c_uint,
    ) -> *mut TRITONSERVER_Error;
}
